--- a/2/bunnyfied-02/package.json
+++ b/2/bunnyfied-02/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "eslint": "8.40.0",
     "@emotion/react": "^11.9.0",
-    "eslint-config-next": "13.4.1",
     "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.3",
+    "classnames": "^2.2.6",
+    "dotenv": "^16.0.3",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.1",
+    "mysql2": "^3.3.2",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "classnames": "^2.2.6",
-    "@mui/material": "^5.6.3"
+    "sequelize": "^6.31.1"
   }
 }
