--- a/1/bunnyfied-02/package.json
+++ b/1/bunnyfied-02/package.json
@@ -12,8 +12,10 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.0",
+    "dotenv": "^16.0.3",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
