--- a/1/bunnyfied-02/package.json
+++ b/1/bunnyfied-02/package.json
@@ -16,8 +16,10 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.3.3",
     "next": "13.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sequelize": "^6.31.1"
   }
 }
