--- a/1/bunnyfied-02/package.json
+++ b/1/bunnyfied-02/package.json
@@ -12,6 +12,8 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.0",
+    "@nextui-org/react": "^1.0.0-beta.13",
+    "@usedapp/core": "^1.2.10",
     "dotenv": "^16.0.3",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
