--- a/1/bunnyfied-02/package.json
+++ b/1/bunnyfied-02/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
@@ -25,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-spinners": "^0.13.8",
     "sequelize": "^6.31.1",
     "socket.io": "^4.6.2",
     "socket.io-client": "^4.6.2"
