--- a/1/bunnyfied-01/package.json
+++ b/1/bunnyfied-01/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "googleapis": "^120.0.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
