--- a/1/bunnyfied-01/package.json
+++ b/1/bunnyfied-01/package.json
@@ -13,8 +13,10 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "googleapis": "^120.0.0",
+    "mysql2": "^3.5.0",
     "next": "13.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sequelize": "^6.32.1"
   }
 }
