--- a/1/bunnyfied-02/package.json
+++ b/1/bunnyfied-02/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.7.1",
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.0",
     "@nextui-org/react": "^1.0.0-beta.13",
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.3",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "framer-motion": "^10.12.18",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.3.3",
     "next": "13.4.1",
