--- a/1/bunnyfied-02/package.json
+++ b/1/bunnyfied-02/package.json
@@ -13,9 +13,11 @@
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.3",
     "@nextui-org/react": "^1.0.0-beta.13",
     "@usedapp/core": "^1.2.10",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
