--- a/1/bunnyfied-02/package.json
+++ b/1/bunnyfied-02/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^3.3.3",
     "next": "13.4.1",
     "nodemailer": "^6.9.3",
+    "razorpay": "^2.9.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
